--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.2",
     "@types/bn.js": "^5.1.5",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.5",
